--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>IT Student Life Simulator</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Bangers&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="day-night-cycle"></div>
@@ -67,6 +67,7 @@
   
     <audio id="switchSound" src="https://assets.mixkit.co/sfx/preview/mixkit-light-switch-sound-2582.mp3"></audio>
     <audio id="achievementSound" src="https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3"></audio>
-  
+
+  <script src="script.js"></script>
 </body>
 </html>
