--- a/index.html
+++ b/index.html
@@ -2,72 +2,225 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT Student Life Simulator</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Bangers&display=swap" rel="stylesheet">
+    <title>Invitation to IT Student Life Simulator</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Dancing+Script:wght@700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #ffffff;
+            overflow: hidden;
+        }
+
+        .invitation-container {
+            perspective: 1500px;
+            width: 600px;
+            height: 400px;
+        }
+
+        .envelope {
+            width: 100%;
+            height: 100%;
+            position: relative;
+            transform-style: preserve-3d;
+            transition: transform 1.5s;
+            cursor: pointer;
+        }
+
+        .envelope.open {
+            transform: rotateX(180deg);
+        }
+
+        .envelope-front, .envelope-back, .letter {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+        }
+
+        .envelope-front {
+            background: linear-gradient(45deg, #f3d684, #e6b325);
+            border-radius: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 80px;
+            color: #8b4513;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.3);
+            overflow: hidden;
+        }
+
+        .envelope-front::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url('data:image/svg+xml;utf8,<svg width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><rect width="100" height="100" fill="none" stroke="%23b8860b" stroke-width="2"/></svg>');
+            opacity: 0.1;
+        }
+
+        .envelope-back {
+            background: #deb887;
+            transform: rotateX(180deg);
+            border-radius: 20px;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.3);
+        }
+
+        .letter {
+            background: url('https://www.transparenttextures.com/patterns/handmade-paper.png'), #fff;
+            padding: 40px;
+            box-sizing: border-box;
+            transform: rotateX(180deg);
+            overflow-y: scroll;
+            scrollbar-width: none; /* Firefox */
+            -ms-overflow-style: none;  /* Internet Explorer 10+ */
+            font-size: 18px;
+            color: #333;
+            text-align: center;
+            border-radius: 20px;
+            box-shadow: 0 15px 35px rgba(0, 0, 0, 0.3);
+        }
+
+        .letter::-webkit-scrollbar { /* WebKit */
+            width: 0;
+            height: 0;
+        }
+
+
+        h1 {
+            font-family: 'Playfair Display', serif;
+            color: #8b4513;
+            margin-bottom: 30px;
+            font-size: 36px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        }
+
+        p {
+            font-family: 'Dancing Script', cursive;
+            font-size: 22px;
+            line-height: 1.6;
+            margin-bottom: 20px;
+        }
+
+        .start-btn {
+            background: linear-gradient(45deg, #4CAF50, #45a049);
+            border: none;
+            color: white;
+            padding: 15px 30px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 20px;
+            margin-top: 30px;
+            cursor: pointer;
+            border-radius: 50px;
+            transition: all 0.3s ease;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        .start-btn:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        .transition-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #000;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.5s ease, visibility 0.5s ease;
+            z-index: 9999;
+        }
+
+        .transition-overlay.active {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .wax-seal {
+            position: absolute;
+            bottom: 20px;
+            right: 20px;
+            width: 80px;
+            height: 80px;
+            background: #b22222;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 24px;
+            color: #f2d472;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            z-index: 3;
+        }
+
+        .wax-seal::before {
+            content: 'IT';
+            font-family: 'Playfair Display', serif;
+            font-weight: bold;
+        }
+
+        .envelope-decoration {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            right: 10px;
+            bottom: 10px;
+            border: 2px solid rgba(139, 69, 19, 0.3);
+            border-radius: 15px;
+            pointer-events: none;
+        }
+    </style>
 </head>
 <body>
-    <div class="day-night-cycle"></div>
-    <div class="game-container">
-        <h1><i class="fas fa-gamepad icon"></i> IT Student Life Simulator</h1>
-        <div class="switch-container">
-            <div class="switch">
-                <span class="switch-label"><i class="fas fa-laptop-code icon"></i>IT Student</span>
-                <label class="toggle">
-                    <input type="checkbox" id="switch1" aria-label="IT Student">
-                    <span class="slider"></span>
-                </label>
+    <div class="invitation-container" id="invitationContainer">
+        <div class="envelope" id="envelope">
+            <div class="envelope-front">
+                <i class="fas fa-envelope"></i>
+                <div class="wax-seal"></div>
+                <div class="envelope-decoration"></div>
             </div>
-            <div class="switch">
-                <span class="switch-label"><i class="fas fa-graduation-cap icon"></i>Has Scholarship</span>
-                <label class="toggle">
-                    <input type="checkbox" id="switch2" aria-label="Has Scholarship">
-                    <span class="slider"></span>
-                </label>
-            </div>
-            <div class="switch">
-                <span class="switch-label"><i class="fas fa-heart icon"></i>Has Girlfriend</span>
-                <label class="toggle">
-                    <input type="checkbox" id="switch3" aria-label="Has Girlfriend">
-                    <span class="slider"></span>
-                </label>
-            </div>
-        </div>
-        <div class="message" id="message"></div>
-        <div class="mood-container">
-            <div id="moodEmoji">😐</div>
-            <div class="mood-meter">
-                <div id="moodMeter"></div>
+            <div class="envelope-back"></div>
+            <div class="letter">
+                <h1>You're Invited!</h1>
+                <p>Dear Future IT Superstar,</p>
+                <p>You are cordially invited to experience the thrilling adventure of the IT Student Life Simulator!</p>
+                <p>Navigate through the challenges of balancing studies, scholarships, and relationships in this exciting journey through the world of technology and education.</p>
+                <p>Are you ready to code your future?</p>
+                <a href="game.html" class="start-btn" id="startBtn">Start Your Adventure</a>
             </div>
         </div>
     </div>
-  
-    <div class="score">Score: <span id="scoreValue">0</span></div>
-    <div class="achievements">
-        <div class="achievement" id="ach1">🖥️ Code Warrior</div>
-        <div class="achievement" id="ach2">💰 Scholarship Pro</div>
-        <div class="achievement" id="ach3">💘 Love Guru</div>
-    </div>
+    <div class="transition-overlay" id="transitionOverlay"></div>
 
-    <i class="fas fa-coffee floating-icon" style="top: 10%; left: 10%;"></i>
-    <i class="fas fa-code floating-icon" style="top: 20%; right: 15%;"></i>
-    <i class="fas fa-headphones floating-icon" style="bottom: 15%; left: 20%;"></i>
-    <i class="fas fa-pizza-slice floating-icon" style="bottom: 25%; right: 10%;"></i>
-    <i class="fas fa-gamepad floating-icon" style="top: 40%; left: 5%;"></i>
-    <i class="fas fa-book floating-icon" style="top: 60%; right: 5%;"></i>
+    <script>
+        const envelope = document.getElementById('envelope');
+        const startBtn = document.getElementById('startBtn');
+        const transitionOverlay = document.getElementById('transitionOverlay');
 
-    <div class="game-over" id="gameOver">
-        <div class="game-over-content">
-            <h2>Game Over!</h2>
-            <p id="gameOverMessage"></p>
-            <button class="restart-btn" onclick="restartGame()">Try Again</button>
-        </div>
-    </div>
-  
-    <audio id="switchSound" src="https://assets.mixkit.co/sfx/preview/mixkit-light-switch-sound-2582.mp3"></audio>
-    <audio id="achievementSound" src="https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3"></audio>
+        envelope.addEventListener('click', () => {
+            envelope.classList.add('open');
+        });
 
-  <script src="script.js"></script>
+        startBtn.addEventListener('click', (e) => {
+            e.preventDefault();
+            transitionOverlay.classList.add('active');
+            setTimeout(() => {
+                window.location.href = e.target.href;
+            }, 500);
+        });
+    </script>
 </body>
 </html>
